# tempobench

./: .gitignore  .pre-commit-config.yaml  .uppercase_allowed  README.md  pyproject.toml  requirements.txt
.devcontainer/: HOA.Dockerfile  devcontainer.json
.github/workflows/: github-actions-formatting.yml  github-actions-lowercase.yml  publish.yml
src/tempobench/: __init__.py  __main__.py  benchmark.py  causality_sample.py  cli.py  dataset.py  trace_acceptance_sample.py
