[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "tempobench"
version = "0.1.3"
description = "Benchmarking framework and datasets for temporal automata tasks"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Nikolaus Holzer" }]
keywords = ["benchmark", "temporal-logic", "automata", "llm", "evaluation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Keep base deps minimal; put adapters behind extras
dependencies = ["requests>=2.31", "tqdm>=4.66", "pydantic>=2"]

[project.optional-dependencies]
hf = ["transformers>=4.43", "accelerate>=0.30", "datasets>=2.20"]
openai = ["openai>=1.40"]
vllm = ["httpx>=0.27"]
synth = ["docker>=7"]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6", "mypy>=1.10"]

[project.scripts]
tempobench = "tempobench.cli:main"

[project.urls]
Homepage = "https://github.com/nik-hz/tempobench"
Issues = "https://github.com/nik-hz/tempobench/issues"
# Docs = "https://you.github.io/tempo-bench"

# -------- Hatch build config (keeps wheel lean) --------
[tool.hatch.build]
# Ship only src/tempobench and a few top-level files in sdists
include = ["src/tempobench/**", "README.md", "LICENSE"]

exclude = [
    "tests/**",
    "server/**",
    "notebooks/**",
    "datasets/**",  # large artifacts should be fetched lazily at runtime
    "docs/**",
    ".github/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tempobench"]
# Include small non-.py assets (schemas, templates, registry)
include = [
    "src/tempobench/**/*.json",
    "src/tempobench/**/*.jsonl",
    "src/tempobench/**/*.yaml",
    "src/tempobench/**/*.yml",
    "src/tempobench/**/*.txt",
]

# -------- old tooling --------
[tool.black]
line-length = 88
target-version = ["py312"]
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
